--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,3 +1,14 @@
+@import 'common/grid.css';
+
 body {
     margin: 0;
+}
+
+/* Header texts */
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Open Sans', sans-serif;
+}
+
+a,p {
+    font-family: 'Open Sans', sans-serif;
 }
