--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,9 @@
 @import 'common/grid.css';
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
 }
@@ -9,6 +13,6 @@ h1,h2,h3,h4,h5,h6 {
     font-family: 'Open Sans', sans-serif;
 }
 
-a,p {
+a,p,label,input {
     font-family: 'Open Sans', sans-serif;
 }
