--- a/webapp/src/common/grid.css
+++ b/webapp/src/common/grid.css
@@ -1,3 +1,5 @@
+/* Container */
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -31,5 +33,33 @@
 @media (min-width: 1240px) {
     .container {
         width: 1180px;
+    }
+}
+
+/* Grid */
+
+@media (max-width: 860px) {
+    .col-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    @for $i from 1 to 12 {
+        .col-$(i) {
+            width: 100%;
+        }
+    }
+}
+
+@media (min-width: 860px) {
+    .col-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+
+    @for $i from 1 to 12 {
+        .col-$(i) {
+            width: calc( $i * 100% / 12);
+        }
     }
 }
