--- a/webapp/src/components/Navigation/navigation.css
+++ b/webapp/src/components/Navigation/navigation.css
@@ -1,18 +1,23 @@
 @import 'common/variables.css';
 
+$link-active: #fff;
+$link-inactive: #aaa;
+
 header {
     height: 56px;
     display: flex;
     flex-direction: row;
     padding: 13px 30px 0px 30px;
-    margin-bottom: -56px;
-    background-color: rgba(0,0,0,0.025);
+    position: absolute;
+    width: 100%;
+    background-color: rgba(0,0,0,0.65);
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.65);
 
     .logo {
         width: 50%;
 
         a {
-            color: $text-main;
+            color: $accent-main;
             text-decoration: none;
             font-weight: 600;
             font-size: 22px;
