--- a/webapp/src/scenes/Home/home.css
+++ b/webapp/src/scenes/Home/home.css
@@ -1,3 +1,52 @@
+@import 'common/variables.css';
+
 .home {
-    padding-top: 70px;
+    padding-top: 90px;
+    min-height: 100vh;
+    background-image: url('./home-background.jpg');
+    background-size: cover;
+    color: $text-default;
+
+    .text-main {
+        margin-top: 5vh;
+        color: white;
+        text-shadow: 0 0 6px black;
+        background-color: rgba(0,0,0,0.37);
+        padding: 0px 20px;
+
+        h1 {
+            margin: 0 0 30px 0;
+            padding-top: 15px;
+            font-size: 44px;
+        }
+
+        p {
+            font-size: 22px;
+            padding-bottom: 15px;
+            margin: 0;
+        }
+    }
+
+    .signup-form {
+        background-color: rgba(255, 255, 255, 0.85);
+    }
+
+    @media (min-width: 860px) {
+
+        .signup-form-wrapper {
+            margin-top: 45vh;
+            .signup-form {
+                margin-top: -50%;
+            }
+        }
+    }
+
+    @media (max-height: 475px) {
+        .signup-form-wrapper {
+            margin-top: 0px;
+            .signup-form {
+                margin-top: 0px;
+            }
+        }
+    }
 }
