--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,5 @@
-@import 'common/grid.css';
-@import 'common/variables.css';
+@import 'common/styles/grid.css';
+@import 'common/styles/variables.css';
 
 * {
     box-sizing: border-box;
