--- a/webapp/src/components/Navigation/navigation.css
+++ b/webapp/src/components/Navigation/navigation.css
@@ -1,16 +1,17 @@
-@import 'common/variables.css';
+@import 'common/styles/variables.css';
 
 $link-active: #fff;
-$link-inactive: #aaa;
+$link-inactive: #999;
 
 header {
-    height: 56px;
+    height: $nav-height;
     display: flex;
     flex-direction: row;
     padding: 13px 30px 0px 30px;
     position: absolute;
+    top: 0;
     width: 100%;
-    background-color: rgba(0,0,0,0.65);
+    background-color: rgba(0,0,0,0.75);
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.65);
 
     .logo {
