--- a/webapp/src/scenes/Home/home.css
+++ b/webapp/src/scenes/Home/home.css
@@ -1,4 +1,4 @@
-@import 'common/variables.css';
+@import 'common/styles/variables.css';
 
 .home {
     padding-top: 90px;
@@ -9,7 +9,6 @@
 
     .text-main {
         margin-top: 5vh;
-        color: white;
         text-shadow: 0 0 6px black;
         background-color: rgba(0,0,0,0.37);
         padding: 0px 20px;
@@ -18,12 +17,14 @@
             margin: 0 0 30px 0;
             padding-top: 15px;
             font-size: 44px;
+            color: white;
         }
 
         p {
             font-size: 22px;
             padding-bottom: 15px;
             margin: 0;
+            color: white;
         }
     }
 
